--- a/css/menu.css
+++ b/css/menu.css
@@ -67,7 +67,7 @@ nav .menu-toggle-btn-wrapper {
   overflow: hidden;
   pointer-events: none;
   opacity: 0;
-  z-index: 10;
+  z-index: 90;
 }
 
 .nav-overlay .nav-items {
